Fixed an issue on z-index of south handle of resizable object info area Fixed wrong style used on south handle of jQueryUI dialogs
git-svn-id: http://svn.projects.ez.no/admin2pp@97 7d5823d8-de58-4d2a-bab8-4b9ce82eb87f

--- a/trunk/extension/admin2pp/design/admin2/stylesheets/admin2pp.css
+++ b/trunk/extension/admin2pp/design/admin2/stylesheets/admin2pp.css
@@ -190,13 +190,14 @@ margin:0 0.5em 0.5em 0.5em;
 display:none;
 }
 /* resizable object info */
-.ui-resizable-s
+.box-content .ui-resizable-s
 {
 height:7px;
 background:#f8f8f8 url(../images/v-sprite-43.png) no-repeat center -176px;
 bottom:-4px;
+z-index:10;
 }
-.ui-resizable-s:hover
+.box-content .ui-resizable-s:hover
 {
 background:#eaeaea url(../images/v-sprite-43.png) no-repeat center -184px;
 }
